--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
   <script src="http://getbootstrap.com/dist/js/bootstrap.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
 
   <link href="main.css" rel="stylesheet" type="text/css" />
   <script src ="data.js"></script>
@@ -13,8 +14,9 @@
 <body>
    <div ng-controller="bookly.BooksController" class="container">
       <h4><input type=" text" ng-model="query" /></h4>
+      <select ng-model="select" ng-options="s for s in selects">Select model</select>
       <div class="row">
-        <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2 book" ng-repeat="book in books | filter:query">
+        <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2 book" ng-repeat="book in books | filter:query | orderBy:select">
           <div class="col-xs-offset-1 book-title">
             {{book.title}}
           </div>
@@ -27,7 +29,7 @@
 
           <div class="cart-button">
             <span class="price">{{book.price | currency}}
-             [[Add]] <!-- Add to cart button  -->
+             <button ng-click="addCart(book.id)">Add</button>
           </div>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 cart">
@@ -36,11 +38,11 @@
           <tr>
             <th width='40%'>Title</th><th width='40%'>Author</th><th width='20%'>Price</th>
           </tr>
-          <tr>
-            <td colspan=3>[[a row for each cart item]]</td>
+          <tr ng-repeat="b in cartBooks">
+            <th width='40%'>{{b.title}}</th><th width='40%'>{{b.author}}</th><th width='20%'>{{b.price | currency}}</th>
           </tr>
           <tr class="cart-total">
-            <td colspan=2 width='80%'>Total</td><td width='20%'>[[total]]</td>
+            <td colspan=2 width='80%'>Total</td><td width='20%'>{{total | currency}}</td>
           </tr>
           </table>
           <div class="btn-group cart-button">
