--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 cart">
-          <h3>your cart has [[item count]] items. </h3>
+          <h3>your cart has {{count}} items. </h3>
           <table class="carttable">
           <tr>
             <th width='40%'>Title</th><th width='40%'>Author</th><th width='20%'>Price</th>
@@ -46,7 +46,7 @@
           </tr>
           </table>
           <div class="btn-group cart-button">
-            [[Empty cart button]]
+            <button ng-click="emptyCart()">Empty Cart</button>
             <button onclick="alert('Dunno how to check out ...');">Check Out</button>
           </div>
         </div>
