--- a/app/index.html
+++ b/app/index.html
@@ -36,13 +36,13 @@
           <h3>your cart has {{count}} items. </h3>
           <table class="carttable">
           <tr>
-            <th width='40%'>Title</th><th width='40%'>Author</th><th width='20%'>Price</th>
+            <th width='40%'>Title</th><th width='40%'>Author</th><th width='20%'>Price</th><th width='20%'>Qty</th>
           </tr>
-          <tr ng-repeat="b in cartBooks">
-            <th width='40%'>{{b.title}}</th><th width='40%'>{{b.author}}</th><th width='20%'>{{b.price | currency}}</th>
+          <tr ng-repeat="beezie in cartBooks">
+            <td width='40%'>{{beezie.title}}</td><td width='40%'>{{beezie.author}}</td><td width='20%'>{{beezie.price | currency}}</td><td width='20%'>{{beezie.quantity}}</td>
           </tr>
           <tr class="cart-total">
-            <td colspan=2 width='80%'>Total</td><td width='20%'>{{total | currency}}</td>
+            <td colspan=2 width='80%'>Total</td><td width='20%'>{{total | currency}}</td><td>{{count}}</td>
           </tr>
           </table>
           <div class="btn-group cart-button">
