converted into coffee

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 
           <div class="cart-button">
             <span class="price">{{book.price | currency}}
-             <button ng-click="addCart(book.id)">Add</button>
+             <button ng-click="addCart(book)">Add</button>
           </div>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 cart">
